--- a/JS-Basics/index.html
+++ b/JS-Basics/index.html
@@ -9,6 +9,7 @@
     <!-- host for our js code -->
 
     <h1>Hello Javascript</h1>
+<h1>Less yapping more work to be done</h1>
 
 
     <script src="index.js"></script>
